// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get a list of exercies 1`] = `
{
  "exercises": {
    "edges": [
      {
        "node": {
          "breakTime": "60",
          "id": "FROZEN-ID",
          "lastSession": "EMPTY",
          "muscleGroup": "CHEST",
          "name": "Supino Reto",
          "repetitions": "10",
          "series": "3",
          "sessionInProgress": "EMPTY",
          "sessions": {
            "edges": [],
          },
          "user": {
            "id": "FROZEN-ID",
          },
          "weight": "20",
          "workoutSplit": {
            "id": "FROZEN-ID",
            "name": "WorkoutSplit NaN name",
          },
        },
      },
      {
        "node": {
          "breakTime": "60",
          "id": "FROZEN-ID",
          "lastSession": "EMPTY",
          "muscleGroup": "BACK",
          "name": "Pull Down",
          "repetitions": "10",
          "series": "3",
          "sessionInProgress": "EMPTY",
          "sessions": {
            "edges": [],
          },
          "user": {
            "id": "FROZEN-ID",
          },
          "weight": "50",
          "workoutSplit": {
            "id": "FROZEN-ID",
            "name": "WorkoutSplit NaN name",
          },
        },
      },
    ],
  },
}
`;

exports[`should get a list of exercies with sessions 1`] = `
{
  "exercises": {
    "edges": [
      {
        "node": {
          "breakTime": "60",
          "id": "FROZEN-ID",
          "lastSession": "EMPTY",
          "muscleGroup": "CHEST",
          "name": "Supino Reto",
          "repetitions": "10",
          "series": "3",
          "sessionInProgress": "EMPTY",
          "sessions": {
            "edges": [],
          },
          "user": {
            "id": "FROZEN-ID",
          },
          "weight": "20",
          "workoutSplit": {
            "id": "FROZEN-ID",
            "name": "WorkoutSplit 1 name",
          },
        },
      },
      {
        "node": {
          "breakTime": "60",
          "id": "FROZEN-ID",
          "lastSession": {
            "id": "FROZEN-ID",
          },
          "muscleGroup": "BACK",
          "name": "Pull Down",
          "repetitions": "10",
          "series": "3",
          "sessionInProgress": {
            "id": "FROZEN-ID",
          },
          "sessions": {
            "edges": [
              {
                "node": {
                  "breakTime": "60",
                  "id": "FROZEN-ID",
                  "repetitions": "10",
                  "series": "3",
                  "weight": "50",
                },
              },
              {
                "node": {
                  "breakTime": "60",
                  "id": "FROZEN-ID",
                  "repetitions": "10",
                  "series": "3",
                  "weight": "50",
                },
              },
            ],
          },
          "user": {
            "id": "FROZEN-ID",
          },
          "weight": "50",
          "workoutSplit": {
            "id": "FROZEN-ID",
            "name": "WorkoutSplit 1 name",
          },
        },
      },
    ],
  },
}
`;
